src/objects/SDP_Price_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Adder_Per_Panel__c</fullName>
        <label>Adder (Per Panel)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adder_W__c</fullName>
        <label>Adder ($/W)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adder_ea__c</fullName>
        <label>Adder (ea)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Community_Program_Offer_Name__c</fullName>
        <formula>Community_Program_Offer__r.Account__r.Name</formula>
        <label>Community Program Offer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Program_Offer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Community Program Offer</label>
        <referenceTo>Community_Program_Offer__c</referenceTo>
        <relationshipLabel>SDP Price Entries</relationshipLabel>
        <relationshipName>SDP_Price_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financing_Type__c</fullName>
        <label>Financing Type</label>
        <picklist>
            <picklistValues>
                <fullName>Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lease_Fund__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lease Fund</label>
        <referenceTo>Lease_Fund__c</referenceTo>
        <relationshipLabel>SDP Price Entries</relationshipLabel>
        <relationshipName>SDP_Price_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Maximum_Size_kW__c</fullName>
        <label>Maximum Size (kW)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Size_kW__c</fullName>
        <label>Minimum Size (kW)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Panel_Description__c</fullName>
        <formula>System_Design_Product__r.Description__c</formula>
        <label>Panel Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Record_Type__c</fullName>
        <label>Property Record Type</label>
        <picklist>
            <picklistValues>
                <fullName>Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Size_Base__c</fullName>
        <label>Size Base</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>System_Design_Product__c</fullName>
        <label>System Design Product</label>
        <referenceTo>System_Design_Product__c</referenceTo>
        <relationshipLabel>SDP Price Entries</relationshipLabel>
        <relationshipName>SDP_Price_Entries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Unique Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>SDP Price Entry</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Community_Program_Offer__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Unique_Id__c</columns>
        <columns>Adder_W__c</columns>
        <columns>Adder_ea__c</columns>
        <columns>Adder_Per_Panel__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SpecialParts</fullName>
        <columns>NAME</columns>
        <columns>Community_Program_Offer__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Unique_Id__c</columns>
        <columns>Adder_W__c</columns>
        <columns>Adder_ea__c</columns>
        <columns>Adder_Per_Panel__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SDP_Price_Entry__c.Special_Part</value>
        </filters>
        <label>Special Parts</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SPE-{000000}</displayFormat>
        <label>SDP Price Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SDP Price Entries</pluralLabel>
    <recordTypes>
        <fullName>Entitlement</fullName>
        <active>true</active>
        <label>Entitlement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Inverter</fullName>
        <active>true</active>
        <label>Inverter</label>
    </recordTypes>
    <recordTypes>
        <fullName>Labor</fullName>
        <active>true</active>
        <description>Labor</description>
        <label>Labor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mounting</fullName>
        <active>true</active>
        <label>Mounting</label>
    </recordTypes>
    <recordTypes>
        <fullName>Panel</fullName>
        <active>true</active>
        <description>Panel</description>
        <label>Panel</label>
    </recordTypes>
    <recordTypes>
        <fullName>Special_Part</fullName>
        <active>true</active>
        <label>Special Part</label>
    </recordTypes>
    <recordTypes>
        <fullName>Trenching</fullName>
        <active>true</active>
        <label>Trenching</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>